[package]
name = "dev_os"
version = "0.1.0"
edition = "2018"
authors = ["Rahul Dev <rahuldev7583@gmail.com>"]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"

[profile.release]
# panic = "abort"

[[bin]]
name = "dev_os"
test = true
bench = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33
